Fix overflow-y property in styles.css

--- a/RPM/pages/marketplace/styles.css
+++ b/RPM/pages/marketplace/styles.css
@@ -7,7 +7,7 @@ body {
   height: 100vh;
   margin: 0;
   overflow-x: hidden;
-  overflow-y: hidden;
+  overflow-y: auto;
 }
 
 a {
